# trainstatus

./: .dockerignore  .gitignore  .release-please-manifest.json  LICENSE  README.md  compose.dev.yml  compose.example.yml  compose.test.yml  demo.configmap.yml.example  demo.pod.yml  dev.pod.yml  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  postgresql.conf  release-please-config.json  renovate.json
backend/: .dockerignore  .gitignore  .infisical.json  .mise.toml  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs  compose.yml  martin.yml  mise.toml  queries.sql
backend/.sqlx/: query-00e8ad09f588bda5904fb25bebb0352b06f0bf75c8d2486b4cd594569df39922.json  query-011145631a2831d2fad85e7a7381a385a59205ffa922661ba614748d0b4ecd14.json  query-01c745d3d5001cc070d58143ca814aa360475e03f0fa80d6317b0ba8f49f8a6c.json  query-01d9b01ef0123edad9be47ddcdcf2911b2532bfed9ce1fcf6b215aaf97d3eb4c.json  query-0563ea213ab737d8c3c91057319871ac6e9a07d76d6add44119623da8b8f0841.json  query-0649bc2f356e13bb0d15a01d3b79943c559f44e105e50bd66629a896e89d3fc8.json  query-0788e05943b09603a3b59e0a599f5cf390915d3413426a159383fb3373311298.json  query-0a8aba64b01a39012d6a5d9d880294252f180b68a86fba071a85c16972a1478f.json  query-0b01b1f3fc0aadbc05f2b8684e6af6151aafb89dbff79dab588457588af985b0.json  query-0c624fea872e7a9969ec5e1f2cdb76e8a61526fb8181d5a96a6e5747d032c463.json  query-0c9a2bd6c954095a7138e85f8c26c6174e95e34a659ecc4cd3e568f79630a15f.json  query-0e77e01746d296db32585e9e141c4e38385baed3ff85a12903ee93c5067e2e9e.json  query-0f3c29123ace33b71b0ab59dd439bac5caff619bf5f71addb218a562085c9671.json  query-1154be3113cec7acd7b2e2188671098bcba0243cbb60bebcf02854b6dd940be1.json  query-1196d71320790518be5c0c9f70b92cbdf477cc1a026efdfc3b4f0f613ca5bb8d.json  query-121843f46fe506b604d206f40e5fba869f6d1e298dbb29b5726f9b169d5a5ccb.json  query-138dc4c9bdde2b1f4b249825dfac4e8ac9ffadd518cde36f0add3ae8a2c00ea4.json  query-13f7306bb46eca7cf79d7d0d99e5f9a18d377c6259830575233197f4831716f9.json  query-1402b9f8c564352cc9e64b49808a89d5940378e5da298480189b670e55fa8a1b.json  query-142e1bde2488e315302279dd0e444fd44f87342577f57aa5e1e10c2f604fa9e1.json  query-1491a1f28352508a420e3c8d5bf61331f2dacbbd328b36af44c10ab98e250f81.json  query-14ac245cf155eacc74a57a5f1c3d6f577a5e1858945c0702e33d7aab1d1a039d.json  query-14b7c693554a5b1ddd71a6006d47e246dd8fc3a94bdc26f0f03821d7b201b2a3.json  query-14f86bfd9e1ffbf73b5c1df8ac83f2956ac897dbeb1d3057c1737d488e2d33d6.json  query-15518f928427d5dd9d776cd903aa92922859b44999b8ec88721c834e6436a5c5.json  query-15e9cd6bcf124956bae66e30b3c3d9738756d5ac975304bca452761c0f79ec2d.json  query-162403ad5ea270709e0f23bcf31b56008d85fab28b808cf5fa6c6e98aeca4220.json  query-167faa2b2b6fd512de8c0a5636fc6b71bb8f91aa9aeb8f48500951e6889b7e25.json  query-16a234f6766f3bb29504b4dadda931f0a1f99964a45fa45b96116e3cc4807c10.json  query-17a5a24f3cc13575ee566ae4c16b1d4e9fc1b5a4e45d415da9bcce9e1350837d.json  query-17ec4e835273dbd1d6b80d53e8f473e3ce82302119b75284a8e67b9ed093e74a.json  query-18a38b9fcd3fead380258853c2e7d4a491ded4b4a3d8f9edf5ec494e5e745b14.json  query-18d2749c9014ffa49c24c6bbd9e4f2ad99d9bc41ed25b7894cc7d4493b8f0688.json  query-19c4f3f5b2df8b05ef2a32a99402b5ac5b78f3a6db1d8a457fb5306cd4fc7d6c.json  query-1b19b319369b2f8346141ee400659ef1f650308eaf65887efcdd66044e332267.json  query-1c667d63d1256e4e58aec83f332ac26d4a5c6053f445505f7371d8767314ef59.json  query-1c6f9d973d27b288f748b6d1f12399f6d10bda50329a241f9415e360c0aa34be.json  query-1d013d8ed3852473991f9a1fc8d609d5776177ab2223e8ba891eabf669400619.json  query-1e7b4981ba617034d5e270f55b9e46a780c3f406ead7994cfa6b3376b6baf8e7.json  query-2023a4baf9cda491e31e1efb0e7a32adbdfff0038401b75330a7ecef9145973e.json  (+206 more)
backend/migrations/: 20240519202655_routes.up.sql  20240519221525_stops.down.sql  20240519221525_stops.up.sql  20240520002212_trips.down.sql  20240520002212_trips.up.sql  20240526185042_alerts.down.sql  20240526185042_alerts.up.sql  20240609200239_bus_routes.down.sql  20240609200239_bus_routes.up.sql  20240609200453_bus_stops.down.sql  20240609200453_bus_stops.up.sql  20240613230108_bus_trips.down.sql  20240613230108_bus_trips.up.sql  20240629162526_last_update.down.sql  20240629162526_last_update.up.sql  20240629162526_source.down.sql  20240629162526_source.up.sql  20240730230831_trip_indexes.down.sql  20240730230831_trip_indexes.up.sql  20240813211652_alerts.down.sql  20240813211652_alerts.up.sql  20240819144505_route.down.sql  20240819144505_route.up.sql  20240819205300_stop.down.sql  20240819205300_stop.up.sql  20240902152604_trip.down.sql  20240902152604_trip.up.sql  20240906152901_alert.down.sql  20240906152901_alert.up.sql  20250411034129_st_track.down.sql  20250411034129_st_track.up.sql  20250531001600_update_status.down.sql  20250531001600_update_status.up.sql  20250914034337_vehicle_geom.down.sql  20250914034337_vehicle_geom.up.sql  20250914200420_vehicle_function.down.sql  20250914200420_vehicle_function.up.sql
backend/src/: alerts.rs  geo.rs  gtfs.rs  imports.rs  lib.rs  macros.rs  main.rs  static_data.rs  times.rs  trip.rs  trips.rs
backend/src/api/: errors.rs  mod.rs  realtime.rs  sse.rs  static_data.rs  trajectory.rs  util.rs  websocket.rs
backend/src/bus/: import.rs  imports.rs  mod.rs  positions.rs  static_data.rs  trips.rs
backend/src/engines/: alerts.rs  mod.rs  realtime.rs  static_cache.rs  static_data.rs  trajectory.rs  valhalla.rs
backend/src/integrations/: gtfs_alert.rs  gtfs_realtime.rs  gtfs_static.rs  mod.rs  oba.rs
backend/src/models/: alert.rs  geom.rs  mod.rs  position.rs  route.rs  shape.rs  source.rs  static_cache.rs  stop.rs  stop_time.rs  trip.rs
backend/src/protos/: gtfs-realtime-NYCT.proto  gtfs-realtime.proto
backend/src/realtime/: alert.rs  bus.rs  mod.rs  oba.rs  position.rs  siri.rs  (+3 more)
backend/tests/: api_tests.rs  integration_tests.rs  mod.rs  static_data_tests.rs
science/: .gitignore  .mise.toml  3-4-trips.ipynb  bus_speeds.ipynb  connect_bus_stops_test.ipynb  continuous_tracking.ipynb  entrances.py  geom_test.ipynb  load.py  main.py  oba.ipynb  pyproject.toml  routes.ipynb  shapes.ipynb  shapetest.ipynb
(+280 files in other folders)
