[package]
name = "backend"
version = "0.12.4"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
bb8 = "0.9.0"
bb8-redis = "0.26.0"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
# crossbeam = "0.8.4"
# csv = "1.4.0"
futures = "0.3.31"
geo = { version = "0.32.0", features = ["use-serde"] }
geozero = { version = "0.15.1", features = ["with-postgis-sqlx"] }
gtfs-structures = "0.46.1"
headers = "0.4.1"
http = "1.2.0"
indicatif = "0.18.0"
itertools = "0.14.0"
polyline = "0.11.0"
prost = "0.14.1"
rayon = "1.11.0"
redis = "1.0.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rgb = "0.8.52"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
# thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
# tokio-stream = { version = "0.1.16", features = ["sync"] }
# tokio-tungstenite = "0.24.0"
tower = { version = "0.5.2", features = ["buffer", "limit"] }
tower-http = { version = "0.6.6", features = [
  "compression-br",
  "compression-gzip",
  "cors",
  "normalize-path",
  "timeout",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
zip = "6.0.0"

[build-dependencies]
prost-build = "0.14.1"

[profile.profiling]
inherits = "release"
debug = true
