[package]
name = "backend"
version = "1.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
bb8 = "0.9.0"
bb8-redis = "0.26.0"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
futures = "0.3.31"
geo = { version = "0.32.0", features = ["use-serde"] }
geojson = "1.0.0"
geozero = { version = "0.15.1", features = ["with-postgis-sqlx"] }
gtfs-structures = "0.47.0"
headers = "0.4.1"
http = "1.2.0"
indicatif = "0.18.0"
polyline = "0.11.0"
proj4rs = { version = "0.1.9", features = ["crs-definitions", "geo-types"] }
prost = "0.14.1"
rayon = "1.11.0"
redis = "1.0.1"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "multipart",
  "query"
] }
rgb = "0.8.52"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
titlecase = "3.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["buffer", "limit"] }
tower-http = { version = "0.6.6", features = [
  "compression-br",
  "compression-gzip",
  "cors",
  "normalize-path",
  "timeout",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
axum-test = "19.1.1"
test-log = { version = "0.2.17", default-features = false, features = ["trace"] }
tokio-test = "0.4.5"

[profile.profiling]
inherits = "release"
debug = true
