[project]
name = "science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "connectorx>=0.4.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "polars-st>=0.1.0a10",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
