[project]
name = "science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "connectorx>=0.4.3",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "lonboard>=0.12.1",
    "matplotlib>=3.10.3",
    "polars>=1.30.0",
    "polars-st>=0.3.0",
]
